add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/arrays)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/linked_list)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/double_link_list)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stack)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/queue)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hashmap)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sorters)